@@ -3,4 +3,9 @@
 Makefile
 *.lo
 *.la
+ascii_tag
+long_tag
+rewrite
+short_tag
+strip_rw
 
