@@ -1,3 +1,7 @@
+2008-01-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* test/rewrite_tag.c: New test for TIFFRewriteField().
+
 2007-12-31  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tif_dirwrite.c: Added TIFFRewriteField().  This new function
